--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,8 @@
 
 @import "bootstrap";
 
+@import "compass/css3";
+
 //->Prelang (ui_framework:twitter_bootstrap)
 
 // Give everything in 'yield' margin to separate it.
@@ -34,4 +36,14 @@
 //->Prelang (user_login:devise)
 .form-user {
   max-width: 450px;
+}
+
+// Default rounding for corners
+.rounded {
+  @include border-radius(15px);
+}
+
+.dark {
+  background-color: $dark-bg;
+  color: $alt-font;
 }
