--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,3 @@
 <h1> <%= @message %> </h1>
 <p>Find me in app/views/pages/index.html.erb</p>
+<%= link_to "Create Presentation", "presentation/new" %>
